// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketHeader /> should render existing ticket 1`] = `
<div
  class="component"
  id="TicketHeader"
>
  <div
    class="d-flex justify-content-between mb-2"
  >
    <div
      class="wrapper component"
    >
      <input
        class="input mr-2 input"
        id="input-text-2"
        name="input-text-2"
        placeholder="Subject"
        tabindex="1"
        type="text"
        value="Great ticket"
      />
    </div>
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="btn-transparent btn btn-secondary btn-sm"
        id="ticket-actions-button"
        type="button"
      >
        <i
          class="material-icons md-2"
        >
          more_vert
        </i>
      </button>
      <span />
      <div
        aria-hidden="true"
        class="actionsDropdown dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <i
            class="icon material-icons"
          >
            snooze
          </i>
          Snooze
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <i
            class="icon material-icons"
          >
            call_merge
          </i>
          Merge ticket
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <i
            class="icon material-icons"
          >
            event_note
          </i>
          Display
           
          all events
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <i
            class="icon material-icons"
          >
            print
          </i>
          Print ticket
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <span>
            <i
              class="icon material-icons"
            >
              not_interested
            </i>
            Mark as spam
          </span>
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="text-danger"
          >
            <i
              class="icon material-icons"
            >
              delete
            </i>
            Delete
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    class="d-flex justify-content-between"
  >
    <div
      class="d-inline-flex"
    >
      <div
        class="d-inline-block mr-2"
      >
        <span
          id="change-status-button"
        >
          <button
            class="wrapper secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                check
              </i>
              Close
            </span>
          </button>
        </span>
      </div>
      <div
        class="d-none d-md-inline-flex align-items-center flex-wrap ml-2 mr-2 mb-1"
      >
        <span
          class="badge-tag tagLabel badge badge-secondary"
          style="color: rgb(128, 136, 214);"
        >
          <span>
            refund
            <i
              class="remove material-icons cursor-pointer ml-1"
            >
              close
            </i>
          </span>
        </span>
        <div
          class="addTags dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-transparent btn btn-secondary btn-sm"
            type="button"
          >
            <i
              class="material-icons md-1 align-middle"
            >
              add
            </i>
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            style="width: auto; min-width: 16.428571428571427em; max-width: 34.285714285714285em; padding: 0px;"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              ADD TAG:
            </h6>
            <h6
              class="dropdown-item-input dropdown-header"
              tabindex="-1"
            />
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-inline-flex align-items-top"
    >
      <div
        class="assignee dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="toggle btn-transparent dropdown-toggle btn btn-secondary"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  AP
                </span>
              </div>
            </div>
            <span
              class="name"
              style="max-width: 100px;"
            >
              Alex Plugaru
            </span>
          </div>
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-right"
          role="menu"
          style="width: 260px;"
          tabindex="-1"
        >
          <h6
            class="dropdown-header"
            tabindex="-1"
          >
            ASSIGN TO:
          </h6>
          <h6
            class="dropdown-item-input dropdown-header"
            tabindex="-1"
          />
          <div>
            <button
              class="assigneeItem dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <div
                class="AgentLabel assigneeLabel"
              >
                <div
                  class="component avatar"
                  style="width: 26px; height: 26px;"
                >
                  <div
                    class="initials"
                    style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
                  >
                    <span
                      style="line-height: 28px;"
                    >
                      AP
                    </span>
                  </div>
                </div>
                <span
                  class="name"
                >
                  Alex Plugaru
                </span>
              </div>
              <i
                class="material-icons md-2"
              >
                close
              </i>
            </button>
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
            <h6
              class="text-uppercase dropdown-header"
              tabindex="-1"
            >
              Users
            </h6>
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              Could not find any user
            </h6>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketHeader /> should render new ticket 1`] = `
<div
  class="component"
  id="TicketHeader"
>
  <div
    class="d-flex justify-content-between mb-2"
  >
    <div
      class="wrapper component"
    >
      <input
        class="input mr-2 input edit-mode"
        id="input-text-1"
        name="input-text-1"
        placeholder="Subject"
        tabindex="1"
        type="text"
        value="Great ticket"
      />
    </div>
  </div>
  <div
    class="d-flex justify-content-between"
  >
    <div
      class="d-inline-flex"
    >
      <div
        class="d-none d-md-inline-flex align-items-center flex-wrap ml-2 mr-2 mb-1"
      >
        <span
          class="badge-tag tagLabel badge badge-secondary"
          style="color: rgb(128, 136, 214);"
        >
          <span>
            refund
            <i
              class="remove material-icons cursor-pointer ml-1"
            >
              close
            </i>
          </span>
        </span>
        <div
          class="addTags dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-transparent btn btn-secondary btn-sm"
            type="button"
          >
            <i
              class="material-icons md-1 align-middle"
            >
              add
            </i>
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            style="width: auto; min-width: 16.428571428571427em; max-width: 34.285714285714285em; padding: 0px;"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              ADD TAG:
            </h6>
            <h6
              class="dropdown-item-input dropdown-header"
              tabindex="-1"
            />
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-inline-flex align-items-top"
    >
      <div
        class="assignee dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="toggle btn-transparent dropdown-toggle btn btn-secondary"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  AP
                </span>
              </div>
            </div>
            <span
              class="name"
              style="max-width: 100px;"
            >
              Alex Plugaru
            </span>
          </div>
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-right"
          role="menu"
          style="width: 260px;"
          tabindex="-1"
        >
          <h6
            class="dropdown-header"
            tabindex="-1"
          >
            ASSIGN TO:
          </h6>
          <h6
            class="dropdown-item-input dropdown-header"
            tabindex="-1"
          />
          <div>
            <button
              class="assigneeItem dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <div
                class="AgentLabel assigneeLabel"
              >
                <div
                  class="component avatar"
                  style="width: 26px; height: 26px;"
                >
                  <div
                    class="initials"
                    style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
                  >
                    <span
                      style="line-height: 28px;"
                    >
                      AP
                    </span>
                  </div>
                </div>
                <span
                  class="name"
                >
                  Alex Plugaru
                </span>
              </div>
              <i
                class="material-icons md-2"
              >
                close
              </i>
            </button>
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
            <h6
              class="text-uppercase dropdown-header"
              tabindex="-1"
            >
              Users
            </h6>
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              Could not find any user
            </h6>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketHeader /> should render spam ticket 1`] = `
<div
  class="component"
  id="TicketHeader"
>
  <div
    class="d-flex justify-content-between mb-2"
  >
    <div
      class="wrapper component"
    >
      <input
        class="input mr-2 input"
        id="input-text-3"
        name="input-text-3"
        placeholder="Subject"
        tabindex="1"
        type="text"
        value="Great ticket"
      />
    </div>
    <div
      class="headerIcon"
    >
      <i
        class="icon material-icons text-danger"
        id="ticket-header-spam-icon"
      >
        flag
      </i>
    </div>
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="btn-transparent btn btn-secondary btn-sm"
        id="ticket-actions-button"
        type="button"
      >
        <i
          class="material-icons md-2"
        >
          more_vert
        </i>
      </button>
      <span />
      <div
        aria-hidden="true"
        class="actionsDropdown dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <i
            class="icon material-icons"
          >
            snooze
          </i>
          Snooze
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <i
            class="icon material-icons"
          >
            call_merge
          </i>
          Merge ticket
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <i
            class="icon material-icons"
          >
            event_note
          </i>
          Display
           
          all events
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <i
            class="icon material-icons"
          >
            print
          </i>
          Print ticket
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <span>
            <i
              class="icon material-icons"
            >
              undo
            </i>
            Unmark as spam
          </span>
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <div
            class="text-danger"
          >
            <i
              class="icon material-icons"
            >
              delete
            </i>
            Delete
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    class="d-flex justify-content-between"
  >
    <div
      class="d-inline-flex"
    >
      <div
        class="d-inline-block mr-2"
      >
        <span
          id="change-status-button"
        >
          <button
            class="wrapper secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                check
              </i>
              Close
            </span>
          </button>
        </span>
      </div>
      <div
        class="d-none d-md-inline-flex align-items-center flex-wrap ml-2 mr-2 mb-1"
      >
        <span
          class="badge-tag tagLabel badge badge-secondary"
          style="color: rgb(128, 136, 214);"
        >
          <span>
            refund
            <i
              class="remove material-icons cursor-pointer ml-1"
            >
              close
            </i>
          </span>
        </span>
        <div
          class="addTags dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-transparent btn btn-secondary btn-sm"
            type="button"
          >
            <i
              class="material-icons md-1 align-middle"
            >
              add
            </i>
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            style="width: auto; min-width: 16.428571428571427em; max-width: 34.285714285714285em; padding: 0px;"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              ADD TAG:
            </h6>
            <h6
              class="dropdown-item-input dropdown-header"
              tabindex="-1"
            />
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-inline-flex align-items-top"
    >
      <div
        class="assignee dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="toggle btn-transparent dropdown-toggle btn btn-secondary"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  AP
                </span>
              </div>
            </div>
            <span
              class="name"
              style="max-width: 100px;"
            >
              Alex Plugaru
            </span>
          </div>
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-right"
          role="menu"
          style="width: 260px;"
          tabindex="-1"
        >
          <h6
            class="dropdown-header"
            tabindex="-1"
          >
            ASSIGN TO:
          </h6>
          <h6
            class="dropdown-item-input dropdown-header"
            tabindex="-1"
          />
          <div>
            <button
              class="assigneeItem dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <div
                class="AgentLabel assigneeLabel"
              >
                <div
                  class="component avatar"
                  style="width: 26px; height: 26px;"
                >
                  <div
                    class="initials"
                    style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
                  >
                    <span
                      style="line-height: 28px;"
                    >
                      AP
                    </span>
                  </div>
                </div>
                <span
                  class="name"
                >
                  Alex Plugaru
                </span>
              </div>
              <i
                class="material-icons md-2"
              >
                close
              </i>
            </button>
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
            <h6
              class="text-uppercase dropdown-header"
              tabindex="-1"
            >
              Users
            </h6>
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              Could not find any user
            </h6>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketHeader /> should render trashed ticket 1`] = `
<div
  class="component"
  id="TicketHeader"
>
  <div
    class="d-flex justify-content-between mb-2"
  >
    <div
      class="wrapper component"
    >
      <input
        class="input mr-2 input"
        id="input-text-4"
        name="input-text-4"
        placeholder="Subject"
        tabindex="1"
        type="text"
        value="Great ticket"
      />
    </div>
    <div
      class="headerIcon"
    >
      <i
        class="icon material-icons text-danger"
        id="ticket-header-trash-icon"
      >
        delete
      </i>
    </div>
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="btn-transparent btn btn-secondary btn-sm"
        id="ticket-actions-button"
        type="button"
      >
        <i
          class="material-icons md-2"
        >
          more_vert
        </i>
      </button>
      <span />
      <div
        aria-hidden="true"
        class="actionsDropdown dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <i
            class="icon material-icons"
          >
            snooze
          </i>
          Snooze
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <i
            class="icon material-icons"
          >
            call_merge
          </i>
          Merge ticket
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <i
            class="icon material-icons"
          >
            event_note
          </i>
          Display
           
          all events
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <i
            class="icon material-icons"
          >
            print
          </i>
          Print ticket
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <span>
            <i
              class="icon material-icons"
            >
              not_interested
            </i>
            Mark as spam
          </span>
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          <i
            class="icon material-icons"
          >
            undo
          </i>
          Undelete
        </button>
      </div>
    </div>
  </div>
  <div
    class="d-flex justify-content-between"
  >
    <div
      class="d-inline-flex"
    >
      <div
        class="d-inline-block mr-2"
      >
        <span
          id="change-status-button"
        >
          <button
            class="wrapper secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                check
              </i>
              Close
            </span>
          </button>
        </span>
      </div>
      <div
        class="d-none d-md-inline-flex align-items-center flex-wrap ml-2 mr-2 mb-1"
      >
        <span
          class="badge-tag tagLabel badge badge-secondary"
          style="color: rgb(128, 136, 214);"
        >
          <span>
            refund
            <i
              class="remove material-icons cursor-pointer ml-1"
            >
              close
            </i>
          </span>
        </span>
        <div
          class="addTags dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-transparent btn btn-secondary btn-sm"
            type="button"
          >
            <i
              class="material-icons md-1 align-middle"
            >
              add
            </i>
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu"
            role="menu"
            style="width: auto; min-width: 16.428571428571427em; max-width: 34.285714285714285em; padding: 0px;"
            tabindex="-1"
          >
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              ADD TAG:
            </h6>
            <h6
              class="dropdown-item-input dropdown-header"
              tabindex="-1"
            />
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="d-inline-flex align-items-top"
    >
      <div
        class="assignee dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="toggle btn-transparent dropdown-toggle btn btn-secondary"
          type="button"
        >
          <div
            class="AgentLabel"
          >
            <div
              class="component avatar"
              style="width: 26px; height: 26px;"
            >
              <div
                class="initials"
                style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
              >
                <span
                  style="line-height: 28px;"
                >
                  AP
                </span>
              </div>
            </div>
            <span
              class="name"
              style="max-width: 100px;"
            >
              Alex Plugaru
            </span>
          </div>
        </button>
        <div
          aria-hidden="true"
          class="dropdown-menu dropdown-menu-right"
          role="menu"
          style="width: 260px;"
          tabindex="-1"
        >
          <h6
            class="dropdown-header"
            tabindex="-1"
          >
            ASSIGN TO:
          </h6>
          <h6
            class="dropdown-item-input dropdown-header"
            tabindex="-1"
          />
          <div>
            <button
              class="assigneeItem dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <div
                class="AgentLabel assigneeLabel"
              >
                <div
                  class="component avatar"
                  style="width: 26px; height: 26px;"
                >
                  <div
                    class="initials"
                    style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
                  >
                    <span
                      style="line-height: 28px;"
                    >
                      AP
                    </span>
                  </div>
                </div>
                <span
                  class="name"
                >
                  Alex Plugaru
                </span>
              </div>
              <i
                class="material-icons md-2"
              >
                close
              </i>
            </button>
            <div
              class="dropdown-divider"
              tabindex="-1"
            />
            <h6
              class="text-uppercase dropdown-header"
              tabindex="-1"
            >
              Users
            </h6>
            <h6
              class="dropdown-header"
              tabindex="-1"
            >
              Could not find any user
            </h6>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
